# dis

./: .env.example  .gitattributes  .gitignore  README.md  setup.sh  uninstall.sh  update.sh
.github/workflows/: ios.yml
infrastructure/nginx/: dis.conf  fastcgi-hide-security-headers.conf  security-headers.conf  static-response-headers.conf
infrastructure/osrm/: README.md
infrastructure/php/: opcache.ini  security.ini
infrastructure/sudoers/: dis-update
infrastructure/systemd/: dis-backup-mount.service  dis-backup-request.path  dis-backup-request.service  dis-backup-request.timer  dis-frontend.service  dis-knmi-realtime.service  (+13 more)
scripts/: aeret-snapshot.mjs  backup-mount.sh  backup-request-worker.sh  backup-restore-runner.sh  backup-verify-runner.sh  backup.sh  deploy.sh  healthcheck.sh  install.sh  maintenance.sh  osrm-admin-request-worker.sh  osrm-containers.conf  osrm.sh  provision-database.sh  prune-backups.sh  render-maintenance-page.php  restore.sh  retire-server-tts.sh  rollback.sh  self-heal-permissions.sh  setup.sh  snapshot-backup-input.sh  uninstall.sh  update.sh  verify-backup.sh  web-update-runner.sh
speech-engine/: README.md  model-packages.requirements.txt  pyproject.toml
speech-engine/dis_tts_engine/: __init__.py  __main__.py  adapters.py  audio.py  catalog.py  download_worker.py  engine.py  healthcheck.py  installer.py  protocol.py  secure_files.py  server.py
speech-engine/tests/: __init__.py  test_adapters.py  test_audio.py  test_catalog.py  test_engine.py  test_healthcheck.py  test_installer.py  test_protocol.py  test_secure_files.py
(+1085 files in other folders)
