[project]
name = "dis-speech-engine-runtime"
version = "1.0.0"
description = "Pinned CPU runtime for the self-hosted DIS speech engine"
requires-python = ">=3.11,<3.12"
dependencies = [
    "chatterbox-tts",
    "setuptools==78.1.0",
    "torch==2.6.0+cpu",
    "torchaudio==2.6.0+cpu",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
chatterbox-tts = { git = "https://github.com/resemble-ai/chatterbox.git", rev = "5de7a54aa4e5e2baadb0182dde554908b48b85c2" }
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[tool.uv]
package = false
override-dependencies = [
    "resemble-perth==1.0.1",
]
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
exclude-newer = "2026-07-22T00:00:00Z"
